[package]
name = "ebabypf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
byteorder = "1.4.3"
chrono = "0.4.24"
clap = { version = "4.2.2", features = ["derive"] }
ctrlc = "3.2.5"
libbpf-rs = "0.20.1"
libc = "0.2.141"
plain = "0.2.3"
tokio = { version = "1.28.0", features = ["full"] }

[build-dependencies]
libbpf-cargo = "0.20.1"
regex = "1.7.3"
